# c-libraries

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  generate-docs.sh  project.yml  requirements.txt  run-tests.sh  versions.toml
.github/workflows/: ci.yaml
drivers/: README.md
drivers/atmega2560/: README.md
drivers/atmega2560/inc/: atmega2560.h  config.h  gpio_driver.h  usart_driver.h
drivers/atmega2560/src/: gpio_driver.c  usart_driver.c
drivers/pic18-k42/: README.md
drivers/pic18-k42/inc/: pic18_adcc.h  pic18_critical.h  pic18_delay.h  pic18_gpio.h  pic18_i2c1.h  pic18_i2c2.h  pic18_interrupts.h  pic18_k42.h  pic18_mcu.h  pic18_nvm.h  pic18_pinout.h  pic18_pinout_config_example.h  pic18_spi1.h  pic18_uart1.h  pic18_uart2.h  platform.h
drivers/pic18-k42/src/: pic18_adcc.c  pic18_gpio.c  pic18_i2c1.c  pic18_i2c2.c  pic18_interrupts.c  pic18_mcu.c  pic18_nvm.c  pic18_spi1.c  pic18_uart1.c  pic18_uart2.c
drivers/pic18_k42/: README.md
drivers/pic18_k42/inc/: config.h  i2c_driver.h  pic18_k42.h
drivers/pic18_k42/src/: i2c_driver.c
drivers/stm32f4xx/inc/: gpio.h  spi.h  stm32f4xx_gpio.h  stm32f4xx_i2c.h  stm32f4xx_mcu.h  stm32f4xx_spi.h  stm32f4xx_usart.h  usart.h
drivers/stm32f4xx/src/: gpio.c  mcu.c  stm32f4xx_gpio.c  stm32f4xx_i2c.c  stm32f4xx_mcu.c  stm32f4xx_spi.c  stm32f4xx_usart.c
embedded-hal/: CMakeLists.txt  README.md
embedded-hal/inc/: embedded_hal.h  gpio.h  serial.h  spi.h  uart.h
embedded-hal/src/: mcu_manager.c
embedded-hal/test/: mcu_driver.h  spi_driver.h  test_serial.c  test_spi.c  test_uart.c  usart_driver.h
esp8266ex-wifi-module/inc/: esp8266ex.h
esp8266ex-wifi-module/src/: esp8266ex.c
framing-protocol/inc/: checksum.h  framing_protocol.h  utilities.h
framing-protocol/src/: checksum.c  framing_protocol.c  utilities.c
hamming-codec/: CMakeLists.txt  hamming.h
hamming-codec/inc/: errno.h  hamming_codec.h
hamming-codec/test/: test_hamming_codec.c
hamming_codec/: CMakeLists.txt  hamming_codec.c  hamming_codec.h
inc/: c_libraries.h  errno.h  main.h
inc/hamming-codec/: hamming.h
lcd-16-2-driver/: CMakeLists.txt
lcd-16-2-driver/inc/: lcd.h
lcd-16-2-driver/src/: lcd.c
lcd-16-2-driver/test/: test_lcd.c
lcd-16-by-2/inc/: lcd.h
lcd-16-by-2/src/: lcd.c
lcd-16x2-driver/: CMakeLists.txt  README.md
lcd-16x2-driver/inc/: errno.h  lcd.h
lcd-16x2-driver/src/: lcd.c
lcd-16x2-driver/test/: test_lcd.c
libraries/buffer/: CMakeLists.txt  README.md
libraries/buffer/inc/: buffer.h
libraries/buffer/src/: buffer.c
libraries/buffer/test/: test_buffer.c
libraries/crc/: CMakeLists.txt  README.md
libraries/crc/inc/: crc.h
libraries/crc/src/: crc.c
libraries/crc/test/: test_crc.c
libraries/embedded-hal/: README.md
libraries/embedded-hal/inc/: adc.h  critical.h  delay.h  embedded_hal.h  gpio.h  i2c.h  interrupt.h  mcu.h  nvm.h  serial.h  spi.h  timer.h
libraries/embedded-hal/src/: embedded_hal.c
libraries/embedded-hal/test/: mcu_driver.h  spi_driver.h  test_serial.c  test_spi.c  usart_driver.h
libraries/enc28j60/: CMakeLists.txt  README.md
libraries/enc28j60/inc/: enc28j60.h
libraries/enc28j60/src/: enc28j60.c
libraries/enc28j60/test/: test_enc28j60.c  test_library.c
libraries/esp8266ex-wifi/: CMakeLists.txt  README.md
libraries/esp8266ex-wifi-module/inc/: esp8266ex.h
libraries/esp8266ex-wifi/inc/: esp8266ex.h
libraries/esp8266ex-wifi/src/: esp8266ex.c
libraries/framing/: CMakeLists.txt  README.md  project.yml
libraries/framing-protocol/: CMakeLists.txt  README.md
libraries/framing-protocol/inc/: framing_protocol.h
libraries/framing-protocol/test/: test_serial_protocol.c
libraries/framing/inc/: framing.h
libraries/framing/src/: framing.c
libraries/framing/test/: test_framing.c
libraries/hamming-codec/inc/: hamming_codec.h
libraries/hamming-codec/src/: hamming_codec.c
libraries/hamming-codec/test/: test_hamming_codec.c
libraries/hd44780/: CMakeLists.txt  README.md
libraries/hd44780/inc/: hd44780.h  hd44780_gpio.h  hd44780_i2c.h  lcd.h
libraries/hd44780/src/: hd44780.c  hd44780_gpio.c  hd44780_i2c.c  lcd.c
libraries/inc/: errno.h  libraries 2.h  libraries.h
libraries/lcd-16-by-2/: CMakeLists.txt
libraries/lcd-16-by-2/inc/: lcd.h
libraries/lcd-16-by-2/test/: test_lcd.c
libraries/logging/: CMakeLists.txt  README.md  project.yml
libraries/logging/inc/: logging.h
libraries/logging/src/: logging.c
libraries/logging/test/: test_logging.c
libraries/new-lib-template/inc/: library.h
libraries/new-lib-template/src/: library.c
libraries/pico-net-stack/: README.md
libraries/rc522-rfid/: CMakeLists.txt  README.md
libraries/rc522-rfid/inc/: rc522.h
libraries/rc522-rfid/src/: rc522.c
libraries/rc522-rfid/test/: rc522_test.c
libraries/ring-buffer/: CMakeLists.txt  README.md  project.yml
libraries/ring-buffer/inc/: ring_buffer.h
libraries/ring-buffer/src/: ring_buffer.c
libraries/ring-buffer/test/: test_ring_buffer.c
libraries/uip/: CMakeLists.txt  README.md
libraries/uip/inc/: arp.h  eth.h  icmp.h  ip.h  udp.h  utils.h
libraries/uip/src/: icmp.c  ip.c  udp.c  utils.c
libraries/uip/test/: test_arp.c
mcu-manager/: CMakeLists.txt
mcu-manager/inc/: mcu_manager.h  timer.h
mcu-manager/test/: test_mcu_manager.c
mcu-mngr-interface/: CMakeLists.txt
mcu-mngr-interface/inc/: gpio.h  mcu_driver.h  mcu_manager.h  timer.h
mcu-mngr-interface/test/: test_mcu_manager.c
ring-buffer/: README.md
spi/: CMakeLists.txt  README.md  spi.h
spi-interface/: CMakeLists.txt  README.md
spi-interface/inc/: spi.h  spi_driver.h
spi-interface/src/: spi.c
spi-interface/test/: test_spi.c
spi/inc/: spi_driver.h
spi/src/: spi.c
src/: main.c
src/hamming-codec/: hamming.c
test/: test_hamming.c  test_hamming_codec.c  test_main.c  test_spi.c
test/support/: unity.c  unity.h  unity_internals.h
uart/: CMakeLists.txt  README.md
uart-interface/inc/: uart.h  usart_driver.h
uart-interface/test/: test_uart.c
uart/inc/: usart_driver.h
uart/src/: uart.c
uart/test/: test_uart.c
(+10 files in other folders)
